# python-workshop

./: .gitignore  Makefile  README.md  concurrent-py312.Dockerfile  concurrent.Dockerfile  gc.Dockerfile  json-vs-orjson.Dockerfile  list-vs-array.Dockerfile  pyproject.toml  use-pydantic-v1.Dockerfile  use-pydantic-v2.Dockerfile
concurrent/: README.md  async.py  chart  make_chart.py  multi_process.py  multi_thread.py  proc.py  pyproject.toml  single.py  start  subinterpreter.py  subinterpreter_with_multi_proc.py  subinterpreter_with_thread.py
gc/: Makefile  README.md  gc_default_setting.py  gc_disabled_1.py  gc_enabled_1.py  gc_enabled_2.py  gc_modified_1.py  gc_modified_2.py
json-vs-orjson/: .gitignore  Makefile  README.md  index.html  json_progress_by_count.json  orjson_progress_by_count.json  posts.pickle  pyproject.toml  script.js  start
json-vs-orjson/tests/: models.py  test_1_prepare_post.py  test_2_json_serialize.py  test_3_orjson_serialize.py  test_4_compare_serialized_data.py
list-vs-array/: README.md  marshalling.py  summation.py
list_vs_array/: README.md  pickling.py  pickling_object.py
use-pydantic/: README.md
use-pydantic/v1/: pyproject.toml
use-pydantic/v2/: README.md  main.py  pyproject.toml
