[tool.poetry]
name = "python-workshop"
version = "0.1.0"
description = ""
authors = ["안성철 <scahn@huray.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
torch = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
